--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js"></script>
 		<script type="text/javascript" src="/js/controllers.js"></script>
 		<script type="text/javascript" src="/js/app.js"></script>
+		<title>Daily app</title>
 	</head>
 	<body>
 		<div ng-view></div>
