--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js"></script>
+		<script type="text/javascript" src="/js/pouchdb-3.2.0.min.js"></script>
 		<script type="text/javascript" src="/js/controllers.js"></script>
 		<script type="text/javascript" src="/js/app.js"></script>
 		<title>Daily app</title>
