--- a/public/html/member.html
+++ b/public/html/member.html
@@ -1,19 +1,6 @@
-<h1>Jose</h1>
+<h1>{{ member.name }}</h1>
 <ul>
 	<li>
-		<div>
-			Today
-		</div>
-		<ul>
-			<li>Tarea 1</li>
-		</ul>
-	</li>
-	<li>
-		<div>
-			Yesterday
-		</div>
-		<ul>
-			<li>Tarea 0</li>
-		</ul>
+
 	</li>
 </ul>
