delete member and make sure there are no duplicates

--- a/public/html/member.html
+++ b/public/html/member.html
@@ -3,6 +3,7 @@
 	<input type="text" ng-model="member.email" />
 	<button type="submit">Cambiar</button>
 </form>
+<a href="#" ng-click="deleteMember($event)">Eliminar</a>
 <ul>
 	<li>
 	</li>
