--- a/public/html/task.html
+++ b/public/html/task.html
@@ -1,5 +1,5 @@
 <h1>{{ task.title }}</h1>
-<h3>{{ task.member.login }}</h3>
+<h3><a href="#/{{ task.member.login }}">{{ task.member.login }}</a></h3>
 
 <form ng-submit="updateTask()">
 	<input type="text" ng-model="task.title" />
