--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 	<head>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js"></script>
+		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-resource.js"></script>
 		<script type="text/javascript" src="/js/controllers.js"></script>
+		<script type="text/javascript" src="/js/services.js"></script>
 		<script type="text/javascript" src="/js/app.js"></script>
 		<title>Daily app</title>
 	</head>
